# GelSightSensor

./: README.md
GelSightCamera/: CMakeLists.txt
GelSightCamera/include/: CGelSightGrabImg.h  CGelSightHeightMap.h  CGelSightHeightMapCalibration.h  CGelSightMarkerMotion.h  COpenCVPoissonSolver.h
GelSightCamera/src/: CGelSightGrabImg.cpp  CGelSightHeightMap.cpp  CGelSightHeightMapCalibration.cpp  CGelSightMarkerMotion.cpp  testCalibrateGelSightHeightMap.cpp  testGelSightCamera.cpp
GelSightCameraWindows/GelSightCalibration/: GelSightCalibration.sln
GelSightCameraWindows/GelSightCalibration/GelSightCalibration/: CGelSightGrabImg.cpp  CGelSightGrabImg.h  CGelSightHeightMapCalibration.cpp  CGelSightHeightMapCalibration.h  GelSightCalibration.vcxproj  GelSightCalibration.vcxproj.filters  testCalibrateGelSightHeightMap.cpp
GelSightCameraWindows/GelSightCamera/: GelSightCamera.sln
GelSightCameraWindows/GelSightCamera/GelSightCamera/: CGelSightHeightMap.cpp  CGelSightHeightMap.h  CGelSightMarkerMotion.cpp  CGelSightMarkerMotion.h  COpenCVPoissonSolver.cpp  COpenCVPoissonSolver.h  GelSightCamera.vcxproj  GelSightCamera.vcxproj.filters  testGelSightCamera.cpp
